Opprettet input felt med knapper og funksjonsnavn

--- a/oppgave1.html
+++ b/oppgave1.html
@@ -15,7 +15,7 @@
         <br><br>
         <button onclick="generer()">Gjør om til store bokstaver</button>
         <br><br>
-        <button onclick="genrer()">Gjør om til små bokstaver</button>
+        <button onclick="generer()">Gjør om til små bokstaver</button>
     </section>
 </body>
 
