La til funksjon som konverterer skriften til små bokstaver i oppg1

--- a/oppgave1.html
+++ b/oppgave1.html
@@ -42,6 +42,15 @@
 
             document.getElementById("utskrift").innerHTML = forstørring;
         }
+
+        function liten() {
+
+            let tekst = document.getElementById("tekstboks").value;
+
+            let forminsking = `${tekst.toLowerCase()}`;
+
+            document.getElementById("utskrift").innerHTML = forminsking;
+        }
     </script>
 </body>
 
