Satte opp html struktur i oppg2

--- a/oppgaver2.html
+++ b/oppgaver2.html
@@ -8,6 +8,23 @@
 </head>
 
 <body>
+    <section>
+        <h1>
+            Innlogging
+        </h1>
+    </section>
+
+    <section>
+        <input type="text" id="brukernavn" name="brukernavn" placeholder="Brukernavn" required>
+        <br><br>
+
+        <input type="password" name="passord" id="passord">
+
+        <button onclick="innlogging()">Logg Inn</button>
+
+        <div id="output"></div>
+
+    </section>
 
 </body>
 
