--- a/oppgaver2.html
+++ b/oppgaver2.html
@@ -18,7 +18,7 @@
         <input type="text" id="brukernavn" name="brukernavn" placeholder="Brukernavn" required>
         <br><br>
 
-        <input type="password" name="passord" id="passord">
+        <input type="password" name="passord" id="passord" placeholder="Passord" required>
 
         <button onclick="innlogging()">Logg Inn</button>
 
