--- a/oppgave3.html
+++ b/oppgave3.html
@@ -15,6 +15,15 @@
 
     <section>
 
+        <input type="text" id="fornavn" name="fornavn" placeholder="Fornavn" required>
+        <br><br>
+
+        <input type="text" id="mellomnavn" name="mellomnavn" placeholder="Mellomnavn" required>
+        <br><br>
+
+        <input type="text" id="etternavn" name="etternavn" placeholder="Etternavn" required>
+        <br><br>
+
     </section>
 </body>
 
