La til else setning e-post uten mellomrom

--- a/oppgave3.html
+++ b/oppgave3.html
@@ -45,7 +45,8 @@
                 let epost = `${fornavn.substring(0, 3).toLowerCase()}.${mellomnavn.substring(0, 1).toLowerCase()}.${etternavn.toLowerCase()}@alf.no`
                 document.getElementById("output").innerHTML = epost;
             } else {
-
+                let epost = `${fornavn}-${""}${etternavn.substring(0, 2)}@alf.no`
+                document.getElementById("output").innerHTML = epost;
             }
 
         }
