Satte opp html struktur på oppg4

--- a/oppgave4.html
+++ b/oppgave4.html
@@ -10,11 +10,22 @@
 <body>
 
     <section>
-
+        <h1>Fergebilletter</h1>
     </section>
 
     <section>
+        <input type="number" name="alder" id="alder" placeholder="Skriv inn alder" required>
+        <br><br>
+    </section>
 
+    <section>
+        <input type="number" name="kilometer" id="kilometer" placeholder="Skriv inn antall km" required>
+        <br><br>
+    </section>
+
+    <section>
+        <button onclick="beregn()">Beregn Pris</button>
+        <br><br>
     </section>
 </body>
 
