--- a/oppgave4.html
+++ b/oppgave4.html
@@ -36,8 +36,11 @@
 
             let kilometer = document.getElementById("kilometer").value.trim();
 
+            if (alder === "" || kilometer === "") {
+                output = `Du har ikke skrevet inn noe!`
+            }
 
-            if (alder <= 12) {
+            else if (alder <= 12) {
                 let ung = kilometer * 3.52 * 0.5
                 output = `Fergebilletten koster ${ung.toFixed(2)}kr for en tur på ${kilometer}km, for en passasjer som er ${alder}år gammel. God tur!`
 
