Ryddet igjen i koden

--- a/oppgave4(del2).html
+++ b/oppgave4(del2).html
@@ -62,7 +62,7 @@
 
             let totalpris = barnpris + voksenpris + pensjonistpris;
 
-            output = `Fergebilletten koster ${totalpris.toFixed(2)} kr for en tur på ${kilometer} km. God tur!`;
+            output = `Fergebillettene koster ${totalpris.toFixed(2)} kr totalt for en tur på ${kilometer} km for disse individene. God tur!`;
 
             document.getElementById("output").innerHTML = output;
 
